--- a/docs/engine/src/css/chessboard.css
+++ b/docs/engine/src/css/chessboard.css
@@ -26,6 +26,9 @@
   width: 49px;
   height: 49px;
   background-color: rgba(255, 0, 0, 0.5);
+  top: 0px;
+  left: 0px;
+  pointer-events: none;
 }
 .check-overlay {
   width: 100px;
