--- a/docs/engine/src/css/misc.css
+++ b/docs/engine/src/css/misc.css
@@ -39,3 +39,10 @@
   text-align: center;
 }
 
+#textdisplay {
+  text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: x-large;
+}
+
+
