Increased size of board

--- a/docs/engine/src/css/misc.css
+++ b/docs/engine/src/css/misc.css
@@ -22,13 +22,13 @@
   margin: 0;
   padding: 0;
   cursor: pointer;
-  width: 49px;  
-  height: 49px;
+  width: 99px;  
+  height: 99px;
   color: transparent;  /* hides text if any */
 }
 
 .promotionbuttons img {
-  width: 49px; /* image stays same size */
+  width: 99px; /* image stays same size */
   height: auto;
   display: inline-block;
   pointer-events: none; /* ensures clicks go to button, not image */
@@ -42,7 +42,7 @@
 #textdisplay {
   text-align: center;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  font-size: x-large;
+  font-size: xx-large;
 }
 
 
