--- a/docs/engine/src/css/misc.css
+++ b/docs/engine/src/css/misc.css
@@ -3,6 +3,7 @@
   position: relative;
   font-weight: bold;
   font-size: 50px;
+  color: white;
   text-align: center;
   padding: 1%;
   top: 15;
@@ -11,7 +12,10 @@
 .botversion {
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 23px;
-  position: relative;
+  color: white;
+  left: 1450px;
+  top: 500px !important;
+  position: absolute;
   text-align: center;
   top: 10
 }
@@ -41,7 +45,6 @@
 }
 
 .promotiondiv {
-  background-color: white;
   text-align: center;
 }
 
