--- a/docs/engine/src/css/misc.css
+++ b/docs/engine/src/css/misc.css
@@ -54,4 +54,28 @@
   font-size: x-large;
 }
 
+@media screen and (orientation: portrait) {
+  body::before {
+    content: "Please rotate your device to landscape.";
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: #333;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    font-size: 1.5em;
+    text-align: center;
+    padding: 2rem;
+  }
+
+  #your-main-app {
+    display: none;
+  }
+}
+
 
