--- a/docs/engine/src/css/misc.css
+++ b/docs/engine/src/css/misc.css
@@ -13,9 +13,7 @@
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 23px;
   color: white;
-  left: 1700px;
-  top: 500px !important;
-  position: absolute;
+  position: relative;
   text-align: center;
   top: 10
 }
