--- a/docs/engine/src/css/chessboard.css
+++ b/docs/engine/src/css/chessboard.css
@@ -23,32 +23,20 @@
 }
 .hint-highlight {
   position: absolute;
-  width: 15px;
-  height: 15px;
-  background-color: rgba(68, 68, 68, 0.5);
-  top: 43px;
-  left: 42px;
-  border-radius: 50%;
-  pointer-events: none;
-}
-.check-overlay {
   width: 100px;
   height: 100px;
-  background-color: rgba(255,0,0, 0.6); /* semi-transparent blue */
-  border-radius: 50%;
-  filter: blur(15px);
-  position: absolute;
+  background-color: rgba(0, 174, 255, 0.74);
   pointer-events: none;
 }
 .post-move-overlay {
-  background-color: rgba(209, 196, 10, 0.9) !important;
+  background-color: rgb(32, 172, 177) !important;
   pointer-events: none
 }
 .piece-hint-background {
-  background-color: rgba(122, 122, 122, 0.5) !important;
+  background-color: rgb(0, 174, 255) !important;
 }
 .selected-highlight {
-  background-color: rgba(209, 196, 10, 0.9) !important;
+  background-color: rgb(32, 172, 177) !important;
 }
 .visible {
   display: block !important;
@@ -57,7 +45,7 @@
   display: none;
 }
 .check-red-background {
-  background-color: red !important;
+  background-color: rgb(196, 0, 0) !important;
 }
 
 .white-1e1d7 {
